Se agrega tabla mas otro elemento a la lista

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
         <li>Baleadas</li>
         <li>Pollo con tajadas</li>
         <li>Alitas</li>
-          
+        <li>Hamburguesas</li>
+
+
     </ol>
+    <table>
+        <tr>
+            <th>Baledas</th>
+            <th>Pollo con tajadas</th>
+            <th>Alitas</th>
+            <th>Hamburguesas</th>
+        </tr>
+    </table>
 </body>
 </html>
